--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "jsdom": "^26.0.0",
+    "prettier": "3.4.2",
     "vite": "^6.0.3",
     "vitest": "^2.1.8"
   }
