--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "axios": "^1.7.9",
+    "eslint-plugin-html": "^8.1.2",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
