--- a/bike-brain/package.json
+++ b/bike-brain/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "npx eslint *.js",
+    "lint:fix": "npx eslint *.js --fix"
   },
   "author": "",
   "license": "ISC",
